# travis-test

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildir.sh  setup.py  sublib.cpp  sublib.h  swig_build.sh  swiglib1.cpp  swiglib1.i  test.cpp  test1.cpp  test_platform.py  testvaluemap.cpp
travis/: download.sh  install-python.sh  run-configure.sh  upload.sh
